<resources>
    <string name="app_name">AgendaBuilder</string>
    <string name="title_activity_agenda">AgendaActivity</string>


    <!--strings for editor_activity_dialog.xml-->
    <string name="name">Name</string>
    <string name="length">Length</string>
    <string name="min">min</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="msg_prompt">Fill up form to proceed</string>

    <!--strings for all_activities_view.xml-->
    <string name="activity_name">Name: </string>
    <string name="activity_length">Length: </string>
    <string name="no_select">Select an activity!</string>
    <string name="activity_type">Type: </string>
    <string name="activity_description">Description: </string>
    <string name="edit_selected">Edit Selected Activity</string>
    <string name="activity_editing">Edit Parked Activities</string>


    <!--strings for bg_activities_view.xml-->
    <string name="welcome_to_agenda_builder">Welcome to Agenda Builder!</string>
    <string name="you_have">You have</string>
    <string name="zero">0</string>
    <string name="unplanned_activity">Parked Activities</string>
    <string name="add_activity">Add Activity</string>
    <string name="go_to_agenda">Go to Agenda Planning</string>


    <!--strings for one_agenda_view.xml-->
    <string name="start_time">Start Time:   </string>
    <string name="end_time">End Time:   </string>
    <string name="enter_start_time">NIL</string>
    <string name="total_length">Total length:   </string>
    <string name="add_day">Add a day</string>

    <string name="choose_parked_activity">Choose a parked activity to add</string>
    <string name="choose_activity">Add activity</string>
    <string name="cancel_activity">Cancel</string>

    <string name="drop_to_add">Drop activities to add</string>
    <string name="drop_to_del">Drop activities to park</string>

</resources>
