<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/border"
    android:id="@+id/editor_activity_dialog_id">

    <FrameLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/editText"
            android:hint="@string/name"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_margin="10dp" />
    </FrameLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <EditText
            android:layout_width="67dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText2"
            android:maxLength="3"
            android:hint="@string/length"
            android:layout_weight="0.10"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/min"
            android:id="@+id/textView"
            android:layout_marginRight="10dp"
            android:layout_gravity="center" />
    </LinearLayout>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_margin="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="10dp"
        android:popupBackground="@color/lighter_grey"
        android:paddingLeft="5dp" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText3"
        android:inputType="textMultiLine"
        android:lines="4"
        android:gravity="top|left"
        android:maxLines="6"
        android:scrollbars="vertical"
        android:hint="@string/description"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginBottom="10dp">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/button" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/button2" />
    </LinearLayout>


</LinearLayout>